# openeo-core

./: LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: CONTRIBUTING.md  ISSUE_REPORTING.md  architecture.md  index.md
docs/openeo-processes/: apply_kernel.json  array_interpolate_linear.json  filter_vector.json  load_collection.json  mask_polygon.json  median.json  or.json  save_result.json  vector_buffer.json  vector_reproject.json
examples/: 01_ndvi.ipynb  01_ndvi.py  02_ml_random_forest.ipynb  03_process_registry.ipynb  04_ml_tempcnn.ipynb
examples/output/rf_model_breizh/: model.pkl
examples/output/tempcnn_model_breizh/: model.pkl
examples/rf_model_breizh/: model.pkl  rf_model_breizh.stac.json
examples/tempcnn_model_breizh/: model.pkl  tempcnn_model_breizh.stac.json
openeo_core/: __init__.py  datacube.py  types.py
openeo_core/exceptions/: __init__.py  general.py  ndvi.py
openeo_core/io/: __init__.py  collection.py  geojson.py  stac.py
openeo_core/model/: __init__.py  base.py  mlm.py  sklearn.py  torch.py  xgboost_backend.py
openeo_core/model/torch_models/: __init__.py  lighttae.py  tempcnn.py
openeo_core/ops/: __init__.py  raster.py  vector.py
openeo_core/ops/scalar/: __init__.py  _common.py  arrays.py  comparison.py  logic.py  statistics.py
openeo_core/processes/: __init__.py  registry.py
openeo_core/processes/resources/process_specs/current/: aggregate_temporal_period.json  apply.json  array_element.json  cloud_detection.json  drop_dimension.json  eq.json  filter_bbox.json  load_geojson.json  load_stac.json  mask.json  ndvi.json  reduce_dimension.json  resample_spatial.json
tests/: test_datacube.py  test_drop_dimension.py  test_io_collection.py  test_io_geojson.py  test_mlm.py  test_model_sklearn.py  test_model_torch.py  test_model_xgboost.py  test_ops_raster.py  test_ops_scalar.py  test_ops_vector.py  test_process_registry.py  test_reduce_dimension.py  test_types.py  test_vector_buffer.py
