[project]
name = "openeo-core"
version = "0.1.0"
description = "Standalone Python core for defining and executing openEO processes locally with xarray, dask, and ML backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Pondi" }]

dependencies = [
    "numpy",
    "xarray",
    "dask[array,dataframe,distributed]",
    "geopandas",
    "dask-geopandas",
    "pystac",
    "pystac-client",
    "stackstac>=0.5.1",
    "planetary-computer",
    "shapely",
    "pandas",
    "joblib",
    "rioxarray>=0.19.0",
]

[project.optional-dependencies]
ml-sklearn = ["scikit-learn", "joblib"]
ml-xgboost = ["xgboost"]
ml-torch = ["torch"]
all = [
    "scikit-learn",
    "xgboost",
]
dev = [
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "xgboost",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openeo_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
