[project]
name = "openeo-core"
version = "0.1.0"
description = "Standalone Python core for defining and executing openEO processes locally with xarray, dask, and ML backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Pondi" }]

dependencies = [
    "numpy>=2.2.6",
    "xarray>=2025.6.1",
    "dask[array,dataframe,distributed]>=2026.1.2",
    "geopandas>=1.1.2",
    "dask-geopandas>=0.5.0",
    "xvec>=0.5.2",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "stackstac>=0.5.1",
    "planetary-computer>=1.0.0",
    "shapely>=2.1.2",
    "pandas>=2.3.3",
    "joblib>=1.5.3",
    "rioxarray>=0.19.0",
    "scipy>=1.15.3",
    "pyproj>=3.6.0",
]

[project.optional-dependencies]
ml-sklearn = ["scikit-learn>=1.7.2", "joblib>=1.5.3"]
ml-xgboost = ["xgboost>=3.2.0"]
ml-torch = ["torch>=2.0.0", "torch-optimizer>=0.3.0"]
all = [
    "scikit-learn>=1.7.2",
    "xgboost>=3.2.0",
    "torch>=2.0.0",
    "torch-optimizer>=0.3.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.2.0",
    "torch>=2.0.0",
    "torch-optimizer>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openeo_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
